<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/activity_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/buttons_area_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_textview">

        <Button
            android:id="@+id/dialog_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_1"/>

        <Button
            android:id="@+id/dialog_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_2"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_area_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttons_area_1">

        <Button
            android:id="@+id/dialog_button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service"/>

        <Button
            android:id="@+id/dialog_button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foreground_service"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_area_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttons_area_2">

        <Button
            android:id="@+id/dialog_button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_json"/>

        <Button
            android:id="@+id/dialog_button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_json"/>

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_1"
        android:name="hua.dit.mobdev.ec.lab4b.fragment.MyFragment1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttons_area_3"/>

    <FrameLayout
        android:id="@+id/fragment_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_1"
        />

</androidx.constraintlayout.widget.ConstraintLayout>